Name:                   regex
Version:                1.1.0.2
Synopsis:               Toolkit for regex-base
Description:            A regular expression toolkit for regex-base with
                        compile-time checking of RE syntax, data types for
                        matches and captures, a text replacement toolkit,
                        portable options, high-level AWK-like tools
                        for building text processing apps, regular expression
                        macros with parsers and test bench, comprehensive
                        documentation, tutorials and copious examples.
Homepage:               http://regex.uk
Author:                 Chris Dornan
License:                BSD3
license-file:           LICENSE
Maintainer:             Chris Dornan <chris@regex.uk>
Copyright:              Chris Dornan 2016-2017
Category:               Text
Build-type:             Simple
Stability:              Stable
bug-reports:            http://issues.regex.uk

Extra-Source-Files:
    README.md
    changelog

Cabal-Version:          >= 1.10

Source-Repository head
    type:               git
    location:           https://github.com/iconnect/regex.git

Source-Repository this
    Type:               git
    Location:           https://github.com/iconnect/regex.git
    Tag:                1.1.0.2



Library
    Hs-Source-Dirs:     .
    Exposed-Modules:
      Text.RE
      Text.RE.REOptions
      Text.RE.Replace
      Text.RE.Summa
      Text.RE.TDFA
      Text.RE.TDFA.ByteString
      Text.RE.TDFA.ByteString.Lazy
      Text.RE.TDFA.Sequence
      Text.RE.TDFA.String
      Text.RE.TDFA.Text
      Text.RE.TDFA.Text.Lazy
      Text.RE.TestBench
      Text.RE.TestBench.Parsers
      Text.RE.Tools
      Text.RE.Tools.Edit
      Text.RE.Tools.Find
      Text.RE.Tools.Grep
      Text.RE.Tools.IsRegex
      Text.RE.Tools.Lex
      Text.RE.Tools.Sed
      Text.RE.ZeInternals
      Text.RE.ZeInternals.Types.Poss

    Other-Modules:
      Text.RE.ZeInternals.AddCaptureNames
      Text.RE.ZeInternals.EscapeREString
      Text.RE.ZeInternals.NamedCaptures
      Text.RE.ZeInternals.PreludeMacros
      Text.RE.ZeInternals.QQ
      Text.RE.ZeInternals.Replace
      Text.RE.ZeInternals.SearchReplace
      Text.RE.ZeInternals.SearchReplace.TDFA
      Text.RE.ZeInternals.SearchReplace.TDFA.ByteString
      Text.RE.ZeInternals.SearchReplace.TDFA.ByteString.Lazy
      Text.RE.ZeInternals.SearchReplace.TDFA.Sequence
      Text.RE.ZeInternals.SearchReplace.TDFA.String
      Text.RE.ZeInternals.SearchReplace.TDFA.Text
      Text.RE.ZeInternals.SearchReplace.TDFA.Text.Lazy
      Text.RE.ZeInternals.SearchReplace.TDFAEdPrime
      Text.RE.ZeInternals.TDFA
      Text.RE.ZeInternals.TestBench
      Text.RE.ZeInternals.TestBench.Parsers
      Text.RE.ZeInternals.Tools.Lex
      Text.RE.ZeInternals.Types.Capture
      Text.RE.ZeInternals.Types.CaptureID
      Text.RE.ZeInternals.Types.IsRegex
      Text.RE.ZeInternals.Types.LineNo
      Text.RE.ZeInternals.Types.Match
      Text.RE.ZeInternals.Types.Matches
      Text.RE.ZeInternals.Types.SearchReplace


    Default-Language:   Haskell2010

    Other-Extensions:
      AllowAmbiguousTypes
      CPP
      DeriveDataTypeable
      DeriveGeneric
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GeneralizedNewtypeDeriving
      MultiParamTypeClasses
      NoImplicitPrelude
      OverloadedStrings
      QuasiQuotes
      RecordWildCards
      ScopedTypeVariables
      TemplateHaskell
      TypeSynonymInstances
      UndecidableInstances

    if !impl(ghc >= 8.0)
      Other-Extensions: TemplateHaskell
    else
      Other-Extensions: TemplateHaskellQuotes

    GHC-Options:
      -Wall
      -fwarn-tabs
      -Wwarn

    Build-depends:
        array                >= 0.4
      , base                 >= 4        && <  5
      , base-compat          >= 0.6      && <  1
      , bytestring           >= 0.10
      , containers           >= 0.4
      , hashable             >= 1.2
      , regex-base           >= 0.93
      , regex-pcre-builtin   >= 0.94
      , regex-tdfa           >= 1.3.1.0
      , template-haskell     >= 2.7
      , text                 >= 1.2
      , time                 >= 1.4.2
      , time-locale-compat   >= 0.1
      , transformers         >= 0.2.2
      , unordered-containers >= 0.2
      , utf8-string          >= 1


-- Generated with re-gen-cabals
