%-    regex                   == <<$version$>>
%-    regex-with-pcre         == <<$version$>>
%-    array                   >= 0.4
%-    base                    >= 4 && < 5
%-    base-compat             >= 0.6.0
%-    bytestring              >= 0.10.2.0
%-    containers              >= 0.4
%-    directory               >= 1.2.1.0
%-    hashable                >= 1.2.3.3
%-    heredoc                 >= 0.2.0.0
%-    http-conduit            >= 2.1.7.2
%-    regex-base              >= 0.93.2
%-    regex-pcre-builtin      >= 0.94.4.8.8.35
%-    regex-tdfa              >= 1.2.0
%-    regex-tdfa-text         >= 1.0.0.3
%-    shelly                  >= 1.6.1.2
%-    smallcheck              >= 1.1.1
%-    tasty                   >= 0.10.1.2
%-    tasty-hunit             >= 0.9.2
%-    tasty-smallcheck        >= 0.8.0.1
%-    template-haskell        >= 2.7
%-    text                    >= 1.2.0.6
%-    time                    >= 1.4.2
%-    time-locale-compat      >= 0.1.0.1
%-    transformers            >= 0.2.2
%-    unordered-containers    >= 0.2.5.1
