%-    regex                   == <<$version$>>
%-    regex-with-pcre         == <<$version$>>
%-    array                   >= 0.4      && < 0.6
%-    base                    >= 4        && < 5
%-    base-compat             >= 0.6      && < 0.10
%-    blaze-html              >= 0.8.1.0
%-    bytestring              == 0.10.*
%-    containers              >= 0.4      && < 0.6
%-    data-default            >= 0.5.3
%-    directory               >= 1.2.1.0
%-    filepath                >= 1.3.0.2
%-    hashable                == 1.2.*
%-    heredoc                 >= 0.2.0.0
%-    http-conduit            >= 2.1.7.2
%-    pandoc                  >= 1.13.2.1
%-    regex-base              == 0.93.*
%-    regex-pcre-builtin      == 0.94.*
%-    regex-tdfa              == 1.2.*
%-    regex-tdfa-text         == 1.0.*
%-    regex-pcre-text         == 0.94.*
%-    shelly                  >= 1.6.1.2
%-    smallcheck              >= 1.1.1
%-    tasty                   >= 0.10.1.2
%-    tasty-hunit             >= 0.9.2
%-    tasty-smallcheck        >= 0.8.0.1
%-    template-haskell        >= 2.7      && < 2.12
%-    text                    == 1.2.*
%-    time                    >= 1.4.2    && < 1.9
%-    time-locale-compat      == 0.1.*
%-    transformers            >= 0.2.2    && < 0.6
%-    unordered-containers    == 0.2.*
