%test-exe re-gen-cabals
    Hs-Source-Dirs:     examples

    Main-Is:            re-gen-cabals.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010
    GHC-Options:
      -Wall
      -fwarn-tabs

%build-depends regex array base base-compat containers bytestring directory regex-base regex-tdfa shelly text

%test-exe re-gen-modules
    Hs-Source-Dirs:     examples

    Main-Is:            re-gen-modules.lhs

    Default-Language:   Haskell2010
    GHC-Options:
      -Wall
      -fwarn-tabs

%build-depends regex array base base-compat bytestring directory regex-base regex-tdfa shelly text

%test-exe re-include
    Hs-Source-Dirs:     examples

    Main-Is:            re-include.lhs

    Default-Language:   Haskell2010
    GHC-Options:
      -Wall
      -fwarn-tabs

    Other-Modules:
      TestKit

%build-depends regex base base-compat bytestring directory shelly text

%test-exe re-nginx-log-processor
    Hs-Source-Dirs:     examples

    Main-Is:            re-nginx-log-processor.lhs

    Default-Language:   Haskell2010
    GHC-Options:
      -Wall
      -fwarn-tabs

%build-depends regex array base base-compat bytestring directory regex-base regex-tdfa shelly text time time-locale-compat transformers unordered-containers

%test-exe re-prep
    Hs-Source-Dirs:     examples

    Main-Is:            re-prep.lhs

    Default-Language:   Haskell2010
    GHC-Options:
      -Wall
      -fwarn-tabs

    Other-Modules:
      TestKit

%build-depends regex base base-compat bytestring directory heredoc http-conduit shelly text

%test-exe re-tests
    Hs-Source-Dirs:     examples

    Main-Is:            re-tests.lhs

    Default-Language:   Haskell2010
    GHC-Options:
      -Wall
      -fwarn-tabs

    Other-Modules:
      TestKit

%build-depends regex array base base-compat bytestring containers directory heredoc regex-base regex-tdfa regex-tdfa-text regex-pcre-builtin smallcheck tasty tasty-hunit tasty-smallcheck template-haskell text unordered-containers

%test-exe re-tutorial
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010
    Default-Extensions: QuasiQuotes
    GHC-Options:
      -Wall
      -fwarn-tabs

%build-depends regex array base base-compat bytestring containers directory hashable heredoc regex-base regex-tdfa regex-tdfa-text regex-pcre-builtin shelly smallcheck tasty tasty-hunit tasty-smallcheck template-haskell transformers text time time-locale-compat unordered-containers

%test re-tutorial-os
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial.lhs

    Other-Modules:
      TestKit

    Default-Language:   Haskell2010
    Extensions:         OverloadedStrings
    Default-Extensions: QuasiQuotes
    GHC-Options:
      -Wall
      -fwarn-tabs

%build-depends regex array base base-compat bytestring containers directory hashable heredoc regex-base regex-tdfa regex-tdfa-text regex-pcre-builtin shelly smallcheck tasty tasty-hunit tasty-smallcheck template-haskell transformers text time time-locale-compat unordered-containers
