%test-exe re-gen-cabals
    Hs-Source-Dirs:     examples

    Main-Is:            re-gen-cabals.lhs

    Other-Modules:
      TestKit

%build-depends-prog regex array base base-compat containers bytestring directory regex-base regex-tdfa shelly text

%test-exe re-gen-modules
    Hs-Source-Dirs:     examples

    Main-Is:            re-gen-modules.lhs

%build-depends-prog regex array base base-compat bytestring directory regex-base regex-tdfa shelly text

%test-exe re-include
    Hs-Source-Dirs:     examples

    Main-Is:            re-include.lhs

    Other-Modules:
      TestKit

%build-depends-prog regex base base-compat bytestring directory shelly text

%test-exe re-nginx-log-processor
    Hs-Source-Dirs:     examples

    Main-Is:            re-nginx-log-processor.lhs

%build-depends-prog regex regex-with-pcre array base base-compat bytestring directory filepath regex-base regex-tdfa shelly text time time-locale-compat transformers unordered-containers

%test-exe re-prep
    Hs-Source-Dirs:     examples

    Main-Is:            re-prep.lhs

    Other-Modules:
      TestKit

%build-depends-prog regex base base-compat bytestring directory heredoc http-conduit shelly text

%test-exe re-tests
    Hs-Source-Dirs:     examples

    Main-Is:            re-tests.lhs

    Other-Modules:
      TestKit

%build-depends-prog regex regex-with-pcre array base base-compat bytestring containers directory filepath heredoc regex-base regex-tdfa regex-tdfa-text regex-pcre-builtin shelly smallcheck tasty tasty-hunit tasty-smallcheck template-haskell text unordered-containers

%test-exe re-tutorial
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial.lhs

    Other-Modules:
      TestKit

    Default-Extensions: QuasiQuotes
%build-depends-prog regex array base base-compat bytestring containers directory hashable heredoc regex-base regex-tdfa regex-tdfa-text regex-pcre-builtin shelly smallcheck tasty tasty-hunit tasty-smallcheck template-haskell transformers text time time-locale-compat unordered-containers

%test re-tutorial-os
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial.lhs

    Other-Modules:
      TestKit

    Extensions:         OverloadedStrings
    Default-Extensions: QuasiQuotes
%build-depends-prog regex array base base-compat bytestring containers directory hashable heredoc regex-base regex-tdfa regex-tdfa-text regex-pcre-builtin shelly smallcheck tasty tasty-hunit tasty-smallcheck template-haskell transformers text time time-locale-compat unordered-containers
