%test-exe re-gen-cabals
    Hs-Source-Dirs:     examples

    Main-Is:            re-gen-cabals.lhs

    Other-Modules:
      TestKit

%build-depends-prog regex array base base-compat containers bytestring directory regex-base regex-tdfa shelly text

%test-exe re-gen-modules
    Hs-Source-Dirs:     examples

    Main-Is:            re-gen-modules.lhs

    Other-Modules:
      TestKit

%build-depends-prog regex array base base-compat bytestring directory regex-base regex-tdfa shelly text

%test-exe re-include
    Hs-Source-Dirs:     examples

    Main-Is:            re-include.lhs

    Other-Modules:
      TestKit

%build-depends-prog regex base base-compat bytestring directory shelly text

%test-exe re-nginx-log-processor
    Hs-Source-Dirs:     examples

    Main-Is:            re-nginx-log-processor.lhs

    Other-Modules:
      TestKit

%build-depends-prog regex regex-with-pcre array base base-compat bytestring directory filepath regex-base regex-tdfa shelly text time time-locale-compat transformers unordered-containers

%test-exe re-prep
    Hs-Source-Dirs:     examples

    Main-Is:            re-prep.lhs

    Other-Modules:
      TestKit

%build-depends-prog regex base base-compat bytestring directory filepath heredoc http-conduit shelly text

%test-exe re-sort-imports
    Hs-Source-Dirs:     examples

    Main-Is:            re-sort-imports.lhs

    Other-Modules:
      TestKit

%build-depends-prog regex base base-compat bytestring directory filepath shelly text

%test-exe re-tests
    Hs-Source-Dirs:     examples

    Main-Is:            re-tests.lhs

    Other-Modules:
      TestKit

%build-depends-prog regex regex-with-pcre array base base-compat bytestring containers directory filepath heredoc regex-base regex-tdfa regex-tdfa-text regex-pcre-builtin shelly smallcheck tasty tasty-hunit tasty-smallcheck template-haskell text unordered-containers utf8-string

%test-exe re-top
    Hs-Source-Dirs:     examples

    Main-Is:            re-top.lhs

    Other-Modules:
      TestKit

%build-depends-prog regex base base-compat blaze-html bytestring data-default directory filepath shelly text time time-locale-compat transformers unordered-containers

%test-exe re-tutorial
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial.lhs

    Other-Modules:
      TestKit

    Default-Extensions: QuasiQuotes
%build-depends-prog regex array base base-compat bytestring containers directory hashable heredoc regex-base regex-tdfa regex-tdfa-text regex-pcre-builtin shelly smallcheck tasty tasty-hunit tasty-smallcheck template-haskell transformers text time time-locale-compat unordered-containers

%test re-tutorial-os
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial.lhs

    Other-Modules:
      TestKit

    Extensions:         OverloadedStrings
    Default-Extensions: QuasiQuotes
%build-depends-prog regex array base base-compat bytestring containers directory hashable heredoc regex-base regex-tdfa regex-tdfa-text regex-pcre-builtin shelly smallcheck tasty tasty-hunit tasty-smallcheck template-haskell transformers text time time-locale-compat unordered-containers

%test-exe re-tutorial-options
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial-options.lhs

    Other-Modules:
      TestKit

    Default-Extensions: QuasiQuotes
%build-depends-prog regex regex-with-pcre array base base-compat bytestring containers directory hashable heredoc regex-base regex-tdfa regex-tdfa-text regex-pcre-builtin shelly smallcheck tasty tasty-hunit tasty-smallcheck template-haskell transformers text time time-locale-compat unordered-containers

%test-exe re-tutorial-replacing
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial-replacing.lhs

    Other-Modules:
      TestKit

    Default-Extensions: QuasiQuotes
%build-depends-prog regex array base base-compat bytestring containers directory hashable heredoc regex-base regex-tdfa regex-tdfa-text regex-pcre-builtin shelly smallcheck tasty tasty-hunit tasty-smallcheck template-haskell transformers text time time-locale-compat unordered-containers

%test-exe re-tutorial-testbench
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial-testbench.lhs

    Other-Modules:
      TestKit

    Default-Extensions: QuasiQuotes
%build-depends-prog regex array base base-compat bytestring containers directory hashable heredoc regex-base regex-tdfa regex-tdfa-text regex-pcre-builtin shelly smallcheck tasty tasty-hunit tasty-smallcheck template-haskell transformers text time time-locale-compat unordered-containers

%test-exe re-tutorial-tools
    Hs-Source-Dirs:     examples

    Main-Is:            re-tutorial-tools.lhs

    Other-Modules:
      TestKit

    Default-Extensions: QuasiQuotes
%build-depends-prog regex array base base-compat bytestring containers directory hashable heredoc regex-base regex-tdfa regex-tdfa-text regex-pcre-builtin shelly smallcheck tasty tasty-hunit tasty-smallcheck template-haskell transformers text time time-locale-compat unordered-containers
