Library
    Hs-Source-Dirs:     .
    Exposed-Modules:
      Text.RE
      Text.RE.PCRE
      Text.RE.PCRE.ByteString
      Text.RE.PCRE.ByteString.Lazy
      Text.RE.PCRE.Sequence
      Text.RE.PCRE.String
      Text.RE.PCRE.Text
      Text.RE.PCRE.Text.Lazy
      Text.RE.REOptions
      Text.RE.Replace
      Text.RE.Summa
      Text.RE.TDFA
      Text.RE.TDFA.ByteString
      Text.RE.TDFA.ByteString.Lazy
      Text.RE.TDFA.Sequence
      Text.RE.TDFA.String
      Text.RE.TDFA.Text
      Text.RE.TDFA.Text.Lazy
      Text.RE.TestBench
      Text.RE.TestBench.Parsers
      Text.RE.Tools
      Text.RE.Tools.Edit
      Text.RE.Tools.Find
      Text.RE.Tools.Grep
      Text.RE.Tools.IsRegex
      Text.RE.Tools.Lex
      Text.RE.Tools.Sed
      Text.RE.ZeInternals
      Text.RE.ZeInternals.Types.Poss

    Other-Modules:
      Text.RE.ZeInternals.AddCaptureNames
      Text.RE.ZeInternals.EscapeREString
      Text.RE.ZeInternals.NamedCaptures
      Text.RE.ZeInternals.PCRE
      Text.RE.ZeInternals.PreludeMacros
      Text.RE.ZeInternals.QQ
      Text.RE.ZeInternals.Replace
      Text.RE.ZeInternals.SearchReplace
      Text.RE.ZeInternals.SearchReplace.PCRE
      Text.RE.ZeInternals.SearchReplace.PCRE.ByteString
      Text.RE.ZeInternals.SearchReplace.PCRE.ByteString.Lazy
      Text.RE.ZeInternals.SearchReplace.PCRE.Sequence
      Text.RE.ZeInternals.SearchReplace.PCRE.String
      Text.RE.ZeInternals.SearchReplace.PCRE.Text
      Text.RE.ZeInternals.SearchReplace.PCRE.Text.Lazy
      Text.RE.ZeInternals.SearchReplace.PCREEdPrime
      Text.RE.ZeInternals.SearchReplace.TDFA
      Text.RE.ZeInternals.SearchReplace.TDFA.ByteString
      Text.RE.ZeInternals.SearchReplace.TDFA.ByteString.Lazy
      Text.RE.ZeInternals.SearchReplace.TDFA.Sequence
      Text.RE.ZeInternals.SearchReplace.TDFA.String
      Text.RE.ZeInternals.SearchReplace.TDFA.Text
      Text.RE.ZeInternals.SearchReplace.TDFA.Text.Lazy
      Text.RE.ZeInternals.SearchReplace.TDFAEdPrime
      Text.RE.ZeInternals.TDFA
      Text.RE.ZeInternals.TestBench
      Text.RE.ZeInternals.TestBench.Parsers
      Text.RE.ZeInternals.Tools.Lex
      Text.RE.ZeInternals.Types.Capture
      Text.RE.ZeInternals.Types.CaptureID
      Text.RE.ZeInternals.Types.IsRegex
      Text.RE.ZeInternals.Types.LineNo
      Text.RE.ZeInternals.Types.Match
      Text.RE.ZeInternals.Types.Matches
      Text.RE.ZeInternals.Types.SearchReplace
