Name:                   mega-regex
Version:                <<$version$>>
Synopsis:               Toolkit for regex-base
Description:            A Regular Expression Toolkit for regex-base with
                        Compile-time checking of RE syntax, data types for
                        matches and captures, a text replacement toolkit,
                        portable options, high-level AWK-like tools
                        for building text processing apps, regular expression
                        macros and test bench, a tutorial and copious examples.
Homepage:               http://regex.uk
Author:                 Chris Dornan
License:                BSD3
license-file:           LICENSE
Maintainer:             Chris Dornan <chris@regex.uk>
Copyright:              Chris Dornan 2016-2017
Category:               Text
Build-type:             Simple
Stability:              RFC
bug-reports:            http://issues.regex.uk

Extra-Source-Files:
    README.markdown
    changelog
    data/access-errors.log
    data/access.log
    data/error.log
    data/events.log
    data/include-result.lhs
    data/pp-result-doc.lhs
    data/pp-result-gen.lhs
    data/pp-test.lhs
    lib/cabal-masters/regex.cabal
    lib/version.txt
    src/Text/RE/TDFA/ByteString/Lazy.hs
    docs/pcre-nginx-log-processor.txt
    docs/tdfa-macros.txt
    docs/pcre-macros.txt

Cabal-Version:          >= 1.16

Source-Repository head
    type:               git
    location:           https://github.com/iconnect/regex.git

Source-Repository this
    Type:               git
    Location:           https://github.com/iconnect/regex.git
    Tag:                <<$version$>>

%include "lib/cabal-masters/constraints-incl.cabal"

%include "lib/cabal-masters/library-incl.cabal"

%include "lib/cabal-masters/executables-incl.cabal"

-- Generated from lib/cabal-masters/mega-regex with re-gen-cabals
