Name:                   regex
Version:                <<$version$>>
Synopsis:               Toolkit for regex-base
Description:            A regular expression toolkit for regex-base with
                        compile-time checking of RE syntax, data types for
                        matches and captures, a text replacement toolkit,
                        portable options, high-level AWK-like tools
                        for building text processing apps, regular expression
                        macros with parsers and test bench, omprehensive
                        documentation, tutorials and copious examples.
Homepage:               http://regex.uk
Author:                 Chris Dornan
License:                BSD3
license-file:           LICENSE
Maintainer:             Chris Dornan <chris@regex.uk>
Copyright:              Chris Dornan 2016-2017
Category:               Text
Build-type:             Simple
Stability:              Stable
bug-reports:            http://issues.regex.uk

%include "lib/cabal-masters/test-extra-source-files-incl.cabal"

Cabal-Version:          >= 1.10

Source-Repository head
    type:               git
    location:           https://github.com/iconnect/regex.git

Source-Repository this
    Type:               git
    Location:           https://github.com/iconnect/regex.git
    Tag:                <<$version$>>

%Werror
%filter-regex-with-pcre
%include "lib/cabal-masters/constraints-incl.cabal"

%include "lib/cabal-masters/library-incl.cabal"

%build-depends-lib array bytestring base base-compat containers hashable regex-base regex-tdfa regex-tdfa-text regex-pcre-builtin template-haskell text time time-locale-compat transformers unordered-containers

%include "lib/cabal-masters/executables-incl.cabal"

-- Generated from lib/cabal-masters/mega-regex with re-gen-cabals
