Name:                   regex-examples
Version:                <<$version$>>
Synopsis:               Tutorial, tests and example programs for regex
Description:            Tutorial, tests and example programs for regex,
                        a Regular Expression Toolkit for regex-base with
                        Compile-time checking of RE syntax, data types for
                        matches and captures, a text replacement toolkit,
                        portable options, high-level AWK-like tools
                        for building text processing apps, regular expression
                        macros and test bench, a tutorial and copious examples.
Homepage:               http://regex.uk
Author:                 Chris Dornan
License:                BSD3
license-file:           LICENSE
Maintainer:             Chris Dornan <chris@regex.uk>
Copyright:              Chris Dornan 2016-2017
Category:               Text
Build-type:             Simple
Stability:              RFC
bug-reports:            http://issues.regex.uk

%include "lib/cabal-masters/test-extra-source-files-incl.cabal"

Cabal-Version:          >= 1.16

Source-Repository head
    type:               git
    location:           https://github.com/iconnect/regex.git

Source-Repository this
    Type:               git
    Location:           https://github.com/iconnect/regex.git
    Tag:                <<$version$>>

%include "lib/cabal-masters/constraints-incl.cabal"

%include "lib/cabal-masters/library-incl.cabal"

%include "lib/cabal-masters/executables-incl.cabal"

-- Generated from lib/cabal-masters/mega-regex with re-gen-cabals
