Version:                <<$version$>>
Synopsis:               Toolkit for regex-base
Description:            A regular expression toolkit for regex-base with
                        compile-time checking of RE syntax, data types for
                        matches and captures, a text replacement toolkit,
                        portable options, high-level AWK-like tools
                        for building text processing apps, regular expression
                        macros with parsers and test bench, omprehensive
                        documentation, tutorials and copious examples.
Homepage:               http://regex.uk
Author:                 Chris Dornan
License:                BSD3
license-file:           LICENSE
Maintainer:             Chris Dornan <chris@regex.uk>
Copyright:              Chris Dornan 2016-2017
Category:               Text
Build-type:             Simple
Stability:              Stable
bug-reports:            http://issues.regex.uk

Extra-Source-Files:
    README.markdown
    changelog

Cabal-Version:          >= 1.10

Source-Repository head
    type:               git
    location:           https://github.com/iconnect/regex.git

Source-Repository this
    Type:               git
    Location:           https://github.com/iconnect/regex.git
    Tag:                <<$version$>>

%Wwarn
