Name:                   regex-with-pcre
%include "lib/cabal-masters/regex-incl.cabal"
%include "lib/cabal-masters/constraints-incl.cabal"
Library
    Hs-Source-Dirs:     .

    Exposed-Modules:
      Text.RE.PCRE
      Text.RE.PCRE.ByteString
      Text.RE.PCRE.ByteString.Lazy
      Text.RE.PCRE.RE
      Text.RE.PCRE.Sequence
      Text.RE.PCRE.String

    Other-Modules:
      Text.RE.Internal.QQ
      Text.RE.Internal.SearchReplace
      Text.RE.Internal.SearchReplace.PCRE
      Text.RE.Internal.SearchReplace.PCRE.ByteString
      Text.RE.Internal.SearchReplace.PCRE.ByteString.Lazy
      Text.RE.Internal.SearchReplace.PCRE.Sequence
      Text.RE.Internal.SearchReplace.PCRE.String
      Text.RE.Internal.SearchReplace.PCREEdPrime

%build-depends-lib base base-compat bytestring containers regex-base regex regex-pcre-builtin regex-tdfa template-haskell transformers unordered-containers

-- Generated with re-gen-cabals
