Name:                   regex
%include "lib/cabal-masters/regex-incl.cabal"
%include "lib/cabal-masters/constraints-incl.cabal"

Library
    Hs-Source-Dirs:     .

    Exposed-Modules:
      Text.RE
      Text.RE.REOptions
      Text.RE.Replace
      Text.RE.Summa
      Text.RE.TDFA
      Text.RE.TDFA.ByteString
      Text.RE.TDFA.ByteString.Lazy
      Text.RE.TDFA.Sequence
      Text.RE.TDFA.String
      Text.RE.TDFA.Text
      Text.RE.TDFA.Text.Lazy
      Text.RE.TestBench
      Text.RE.Tools
      Text.RE.Tools.Edit
      Text.RE.Tools.Grep
      Text.RE.Tools.Lex
      Text.RE.Tools.Sed
      Text.RE.ZeInternals
      Text.RE.ZeInternals.AddCaptureNames
      Text.RE.ZeInternals.EscapeREString
      Text.RE.ZeInternals.Lex
      Text.RE.ZeInternals.NamedCaptures
      Text.RE.ZeInternals.PreludeMacros
      Text.RE.ZeInternals.QQ
      Text.RE.ZeInternals.Replace
      Text.RE.ZeInternals.SearchReplace
      Text.RE.ZeInternals.SearchReplace.TDFA
      Text.RE.ZeInternals.SearchReplace.TDFA.ByteString
      Text.RE.ZeInternals.SearchReplace.TDFA.ByteString.Lazy
      Text.RE.ZeInternals.SearchReplace.TDFA.Sequence
      Text.RE.ZeInternals.SearchReplace.TDFA.String
      Text.RE.ZeInternals.SearchReplace.TDFA.Text
      Text.RE.ZeInternals.SearchReplace.TDFA.Text.Lazy
      Text.RE.ZeInternals.SearchReplace.TDFAEdPrime
      Text.RE.ZeInternals.TDFA
      Text.RE.ZeInternals.TestBench
      Text.RE.ZeInternals.Types.Capture
      Text.RE.ZeInternals.Types.CaptureID
      Text.RE.ZeInternals.Types.IsRegex
      Text.RE.ZeInternals.Types.LineNo
      Text.RE.ZeInternals.Types.Match
      Text.RE.ZeInternals.Types.Matches
      Text.RE.ZeInternals.Types.SearchReplace

%build-depends-lib array bytestring base base-compat containers hashable regex-base regex-tdfa regex-tdfa-text template-haskell text time time-locale-compat transformers unordered-containers

-- Generated with re-gen-cabals
