Extra-Source-Files:
    README.markdown
    changelog
    data/access-errors.log
    data/access.log
    data/error.log
    data/events.log
    data/include-result.lhs
    data/pp-result-doc.lhs
    data/pp-result-gen.lhs
    data/pp-test.lhs
    lib/cabal-masters/constraints-incl.cabal
    lib/cabal-masters/executables-incl.cabal
    lib/cabal-masters/library-incl.cabal
    lib/cabal-masters/mega-regex.cabal
    lib/cabal-masters/regex.cabal
    lib/cabal-masters/regex-examples.cabal
    lib/cabal-masters/test-extra-source-files-incl.cabal
    lib/mega-regex.cabal
    lib/version.txt
    docs/pcre-nginx-log-processor.txt
    docs/tdfa-macros.txt
    docs/pcre-macros.txt
    src/Text/RE/PCRE/ByteString.hs
    src/Text/RE/PCRE/ByteString/Lazy.hs
    src/Text/RE/PCRE/Sequence.hs
    src/Text/RE/PCRE/String.hs
    src/Text/RE/TDFA/ByteString.hs
    src/Text/RE/TDFA/ByteString/Lazy.hs
    src/Text/RE/TDFA/Sequence.hs
    src/Text/RE/TDFA/String.hs
    src/Text/RE/TDFA/Text.hs
    src/Text/RE/TDFA/Text/Lazy.hs
